--- a/src/App.css
+++ b/src/App.css
@@ -2,44 +2,73 @@
 
 * {
    margin: 0px;
+   box-sizing: border-box;
+}
+
+html,
+body {
+   height: 100%;
+}
+
+.footer {
+   margin-top: auto;
+   background-color: #202329;
+   color: aliceblue;
 }
 
 .App {
    text-align: center;
    font-family: 'Source Sans Pro', sans-serif;
    letter-spacing: normal;
+   min-height: 100vh;
+   display: flex;
+   flex-direction: column;
 }
 
-.App-logo {
-   height: 40vmin;
-   pointer-events: none;
-   border: 1px solid red;
-}
 
-h1 {
-   margin: 10px;
-}
-
-h3 {
-   margin-bottom: 30px;
-}
 
 .App-main {
    background-color: #282c34;
-   height: 100vh;
+
    display: flex;
    flex-direction: column;
-   align-items: center;
-   justify-content: center;
-   font-size: calc(10px + 2vmin);
+   font-size: 1rem;
    color: white;
-
+   width: 100%;
+   flex: 1;
 }
+
+.game {
+   flex: 1;
+   display: flex;
+   align-items: stretch;
+   justify-content: center;
+   padding: auto;
+}
+
+
+.board {
+   aspect-ratio: 1/1;
+   max-height: 80vmin;
+   min-height: 80vmin;
+   margin: auto 10px;
+}
+
+.button-container {
+   margin: auto 0;
+   display: flex;
+   flex-direction: column;
+   justify-content: flex-start;
+}
+
+
+/* .App-main * {
+
+   border: 1px solid red;
+} */
 
 .bulb {
    display: flex;
-   width: calc(50px + 10vmin);
-   height: calc(50px + 10vmin);
    border-radius: 50%;
 }
 
