--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
 * {
    margin: 0px;
    box-sizing: border-box;
+   /* border: 1px solid red; */
 }
 
 html,
@@ -43,7 +44,7 @@ body {
    display: flex;
    align-items: stretch;
    justify-content: center;
-   padding: auto;
+   /* padding: auto; */
 }
 
 
@@ -55,10 +56,15 @@ body {
 }
 
 .button-container {
-   margin: auto 0;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
+   align-items: flex-start;
+   height: 100%;
+   /* border: 1px solid red; */
+   margin-top: 1rem;
+
+
 }
 
 
