--- a/src/components/button/Button.module.css
+++ b/src/components/button/Button.module.css
@@ -1,6 +1,35 @@
 .myButton {
-	width: 200px;
-	height: 2em;
-	font-size: 20px;
+	display: inline-block;
+	border: none;
 	border-radius: 15px;
+	padding: 1rem 2rem;
+	flex: 1;
+	/* margin: 0;	 */
+	text-decoration: none;
+	background: rgb(113, 113, 113);
+	color: white;
+	font-family: sans-serif;
+	font-size: 1rem;
+	width: 150px;
+	cursor: pointer;
+	text-align: center;
+	transition: background 250ms ease-in-out,
+		transform 150ms ease;
+	appearance: none;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	margin-bottom: 10px;
+}
+
+.myButton:hover {
+	background: rgb(88, 88, 88);
+}
+
+/* .myButton:focus {
+	outline: 1px solid #fff;
+	outline-offset: 0px;
+} */
+
+.myButton:active {
+	transform: scale(0.99);
 }
